working on feedback on swagger
